--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,7 @@
           <ul class="nav-links">
             <li><a routerLink="/home" routerLinkActive="active">Inicio</a></li>
             <li><a routerLink="/courses" routerLinkActive="active">Cursos</a></li>
-            <li><a routerLink="/about" routerLinkActive="active">Nosotros</a></li>
-            <li><a routerLink="/contact" routerLinkActive="active">Contacto</a></li>
+              <li><a href="#" (click)="scrollToFooter($event)">Contacto</a></li>
           </ul>
         </nav>
         
@@ -87,7 +86,7 @@
 </main>
 
 <!-- Footer -->
-<footer class="main-footer">
+<footer class="main-footer" id="contact">
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
