added instrcutor mock, and appicon

--- a/src/app/component/company-success/company-success.component.html
+++ b/src/app/component/company-success/company-success.component.html
@@ -103,7 +103,7 @@
             </div>
           </div>
         </div>
-        
+       
         <div class="contact-info mt-5">
           <div class="contact-box">
             <h3>¿Tiene preguntas?</h3>
@@ -111,15 +111,17 @@
             <div class="contact-methods">
               <div class="contact-method">
                 <i class="bi bi-telephone"></i>
-                <span>(55) 1234-5678</span>
+                <span>(52) 44 2459 6476</span>
               </div>
               <div class="contact-method">
                 <i class="bi bi-envelope"></i>
-                <span>empresas&#64;uniprotec.com</span>
+                <span>ventas&#64;uniprotec.net</span>
               </div>
               <div class="contact-method">
                 <i class="bi bi-whatsapp"></i>
-                <span>55-8765-4321</span>
+                <a href="https://wa.me/5214424596476" target="_blank" rel="noopener noreferrer">
+                44 2459 6476
+              </a>
               </div>
             </div>
           </div>
