--- a/src/app/component/coursedetails/coursedetails.component.html
+++ b/src/app/component/coursedetails/coursedetails.component.html
@@ -92,11 +92,11 @@
                   </div>
                 </div>
 
-                <!-- No date selected message -->
+                <!-- No date selected message 
                 <div class="no-date-selected mb-2" *ngIf="!selectedCourseInstance && !selectedDate">
                   <i class="bi bi-calendar-x"></i>
                   <span>Aún no has seleccionado una fecha</span>
-                </div>
+                </div>-->
 
                 <!-- Choose date button -->
                 <button class="btn btn-outline-primary btn-sm w-100" (click)="changeSection('dates')">
