changed hero slides, removed courselist from nav, added more upcoming limit, added whatsappgroup to coursedate model and service ,And checkout success

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <nav class="main-nav d-none d-md-block">
           <ul class="nav-links">
             <li><a routerLink="/home" routerLinkActive="active">Inicio</a></li>
-            <li><a routerLink="/courses" routerLinkActive="active">Cursos</a></li>
+            <!--<li><a routerLink="/courses" routerLinkActive="active">Cursos</a></li>-->
               <li><a href="#" (click)="scrollToFooter($event)">Contacto</a></li>
           </ul>
         </nav>
