--- a/src/app/component/company-success/company-success.component.html
+++ b/src/app/component/company-success/company-success.component.html
@@ -128,12 +128,12 @@
         </div>
         
         <div class="action-buttons mt-5">
-          <button class="btn btn-primary me-3" (click)="downloadRequestDetails()">
+          <!--<button class="btn btn-primary me-3" (click)="downloadRequestDetails()">
             <i class="bi bi-file-earmark-pdf me-2"></i>
             Descargar detalles
-          </button>
+          </button>-->
           
-          <button class="btn btn-outline-primary" routerLink="/courses">
+          <button class="btn btn-outline-primary" routerLink="/">
             <i class="bi bi-search me-2"></i>
             Explorar más cursos
           </button>
