--- a/src/app/component/coursedetails/coursedetails.component.html
+++ b/src/app/component/coursedetails/coursedetails.component.html
@@ -14,7 +14,7 @@
       <i class="bi bi-exclamation-triangle me-2"></i>
       {{ errorMessage || 'Ocurrió un error al cargar el curso. Por favor, intente de nuevo más tarde.' }}
       <div class="mt-3">
-        <button class="btn btn-outline-danger" routerLink="/courses">
+        <button class="btn btn-outline-danger" routerLink="/">
           Volver a cursos
         </button>
       </div>
