--- a/src/app/component/redesigned-home/redesigned-home.component.html
+++ b/src/app/component/redesigned-home/redesigned-home.component.html
@@ -24,7 +24,7 @@
         <div class="carousel-container">
           <img [src]="slide.imageUrl" [alt]="slide.title">
           <div class="carousel-caption">
-            <h1>{{ slide.title }}</h1>
+           <!-- <h1>{{ slide.title }}</h1>-->
           </div>
         </div>
       </ng-template>
