--- a/src/app/component/user/user-courses/user-courses.component.html
+++ b/src/app/component/user/user-courses/user-courses.component.html
@@ -20,7 +20,7 @@
       <i class="bi bi-mortarboard"></i>
       <h2>No tienes cursos inscritos</h2>
       <p>Explora nuestro catálogo y encuentra cursos que potencien tu carrera profesional.</p>
-      <button class="btn btn-primary" routerLink="/courses">Ver catálogo de cursos</button>
+      <button class="btn btn-primary" routerLink="/">Ver catálogo de cursos</button>
     </div>
   </div>
   
