--- a/src/app/component/upcoming-courses/upcoming-courses.component.html
+++ b/src/app/component/upcoming-courses/upcoming-courses.component.html
@@ -214,10 +214,11 @@
                       <i class="bi bi-clock"></i>
                       <span>{{ formatTime(course.date) }}</span>
                     </div>
+                    <!--
                     <div class="info-item">
                       <i class="bi bi-person-badge"></i>
                       <span>Capacitador: {{ course.instructor.name }}</span>
-                    </div>
+                    </div>-->
                   </div>
                   
                   <div class="card-footer">
