--- a/src/app/component/redesigned-home/redesigned-home.component.html
+++ b/src/app/component/redesigned-home/redesigned-home.component.html
@@ -173,8 +173,8 @@
   <div class="container text-center">
     <h2>¿Listo para mejorar sus habilidades profesionales?</h2>
     <p class="lead">Únase a más de 15,000 profesionales que han transformado su carrera con nosotros</p>
-    <button class="btn btn-primary mt-3" (click)="navigateToAllCourses()">
+   <!-- <button class="btn btn-primary mt-3" (click)="navigateToAllCourses()">
       Explorar Cursos Disponibles
-    </button>
+    </button>-->
   </div>
 </section>
