--- a/src/app/component/user/dashboard/dashboard.component.html
+++ b/src/app/component/user/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
-          
+          <!--
           <div class="stat-card">
             <div class="stat-icon">
               <i class="bi bi-award"></i>
@@ -58,7 +58,7 @@
             <a routerLink="/dashboard/certificates" class="card-link">
               <i class="bi bi-arrow-right"></i>
             </a>
-          </div>
+          </div>-->
         </div>
         
         <!-- Next Course Panel -->
